@@ -1,3 +1,9 @@
+Tue Mar  2 11:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSMatrix.m: Tracking fixes by Benhur-de-Oliveira.Stein@imag.fr
+	* Source/NSControl.m: Fix setting of cell states by Benhur
+	* Source/NSCell.m: Toggle cell state in mouse tracking
+
 Tue Mar  2 08:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Merge in 'dawn' CVS branch.
